# why-c

./: CMakeLists.txt
include/: scanner.h
src/: scanner.c
tests/: scanner_tests.cc
